force-app/main/default/objects/Opportunity/fields/NSSales_609_1_RailWeight__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_RailWeight__c</fullName>
    <label>Rail Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>140#</fullName>
            </value>
            <value>
                <fullName>136#</fullName>
            </value>
            <value>
                <fullName>132#</fullName>
            </value>
            <value>
                <fullName>131#</fullName>
            </value>
            <value>
                <fullName>122#</fullName>
            </value>
            <value>
                <fullName>115#</fullName>
            </value>
            <value>
                <fullName>112#</fullName>
            </value>
            <value>
                <fullName>100#</fullName>
            </value>
            <value>
                <fullName>90#</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>