force-app/main/default/objects/Opportunity/fields/NSSales_609_1_status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_status__c</fullName>
    <description>Created as part of Req#3332</description>
    <label>609.1 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Retained - Strategic Asset</fullName>
            </value>
            <value>
                <fullName>Retained - Turnout Maintenance Fee Paid</fullName>
            </value>
            <value>
                <fullName>Retained - New Business Opportunity</fullName>
            </value>
            <value>
                <fullName>Retained - Not Applicable for 609.1 Review</fullName>
            </value>
            <value>
                <fullName>Approved for Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>