force-app/main/default/objects/Opportunity/fields/NSSales_609_1_Submitter__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_Submitter__c</fullName>
    <description>Craeted as part of 609.1 Switch Removal Approval Process</description>
    <label>609.1 Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>