force-app/main/default/objects/Opportunity/fields/NSSales_609_1_SubmitterEmail__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_SubmitterEmail__c</fullName>
    <description>Created as part of 609.1 Switch Removal Approval Process</description>
    <label>609.1 Submitter Email</label>
    <type>Email</type>
</CustomField>