force-app/main/default/objects/Opportunity/fields/NSSales_609_1_SwitchIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_SwitchIdentificationNumber__c</fullName>
    <description>Required to be entered when 609.1 Opportunity is submitted for approval.</description>
    <label>Switch Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>