force-app/main/default/objects/Opportunity/fields/NSSales_609_1_SwitchRemovalRequest__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_SwitchRemovalRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of Req#3332</description>
    <label>609.1 Switch Removal Request</label>
    <type>Checkbox</type>
</CustomField>