force-app/main/default/objects/Opportunity/fields/NSSales_609_1_TimeinStatus_New__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_TimeinStatus_New__c</fullName>
    <formula>TODAY() - NS_Date_to_update_time_in_status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>