force-app/main/default/objects/Opportunity/fields/NSSales_609_1_TurnoutRemoved__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1_TurnoutRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Turnout Removed</label>
    <type>Checkbox</type>
</CustomField>