force-app/main/default/objects/Opportunity/fields/NSSales_609_1IndustrialDevelopmentRespon__c.field-meta.xml
<CustomField>
    <fullName>NSSales_609_1IndustrialDevelopmentRespon__c</fullName>
    <label>Industrial Development Response Date</label>
    <type>Date</type>
</CustomField>