force-app/main/default/objects/Opportunity/fields/NSSales_Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Account_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Account Classification</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>You cannot select an Account Classification record that does not belong to this Account.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>BU__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BU__c</referenceTo>
    <relationshipLabel>Opportunities (Account Classification)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>