force-app/main/default/objects/Opportunity/fields/NSSales_All_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>NSSales_All_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Approval Received</label>
    <type>Checkbox</type>
</CustomField>