force-app/main/default/objects/Opportunity/fields/NSSales_Annual_System_Revenue__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Annual_System_Revenue__c</fullName>
    <label>Annual System Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>