force-app/main/default/objects/Opportunity/fields/NSSales_Any_NPO_Rejected__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Any_NPO_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any NPO Rejected?</label>
    <type>Checkbox</type>
</CustomField>