force-app/main/default/objects/Opportunity/fields/NSSales_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field provisioning the user to go through the whole NPO approval process even if the Volume threshold criteria not met. Checking on this field will trigger process builder to lock the record, notify Approval owner.</description>
    <inlineHelpText>By checking this checkbox the NPO approval process can be initiated manually</inlineHelpText>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>