force-app/main/default/objects/Opportunity/fields/NSSales_AssignedId_ID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_AssignedId_ID__c</fullName>
    <description>It checks if the logged in User is ID Manager of the Opportunity</description>
    <formula>IF($User.Id == NSSales_609_1_IDManagerApprovalOwner__c, 
&quot;true&quot;,
&quot;false&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AssignedId_ID</label>
    <type>Text</type>
</CustomField>