force-app/main/default/objects/Opportunity/fields/NSSales_Auto_Intermodal__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Auto_Intermodal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto/Intermodal</label>
    <type>Checkbox</type>
</CustomField>