force-app/main/default/objects/Opportunity/fields/NSSales_Auto_Intermodal_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Auto_Intermodal_Owner_Email__c</fullName>
    <label>Auto/Intermodal Owner Email</label>
    <type>Email</type>
</CustomField>