force-app/main/default/objects/Opportunity/fields/NSSales_Auto_Intermodal_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Auto_Intermodal_Status__c</fullName>
    <label>Auto/Intermodal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>