force-app/main/default/objects/Opportunity/fields/NSSales_Car_Miles__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Car_Miles__c</fullName>
    <label>(+/-) Car Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>