force-app/main/default/objects/Opportunity/fields/NSSales_City__c.field-meta.xml
<CustomField>
    <fullName>NSSales_City__c</fullName>
    <label>Shipping City</label>
    <type>TextArea</type>
</CustomField>