force-app/main/default/objects/Opportunity/fields/NSSales_Commodity_Group__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Commodity_Group__c</fullName>
    <inlineHelpText>This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Commodity Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>