force-app/main/default/objects/Opportunity/fields/NSSales_Converted_RecordType__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Converted_RecordType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted RecordType</label>
    <type>Checkbox</type>
</CustomField>