force-app/main/default/objects/Opportunity/fields/NSSales_Crew_Starts__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Crew_Starts__c</fullName>
    <label>(+/-) Crew Starts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>