force-app/main/default/objects/Opportunity/fields/NSSales_Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Date_Reported__c</fullName>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>