force-app/main/default/objects/Opportunity/fields/NSSales_Days_in_Internal_Review__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Days_in_Internal_Review__c</fullName>
    <formula>IF( !ISBLANK(NSSales_InStageDayCount__c) , (NOW()-(NSSales_InStageDayCount__c)), null)</formula>
    <label>Days in Internal Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>