force-app/main/default/objects/Opportunity/fields/NSSales_Destination_Ramp__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Destination_Ramp__c</fullName>
    <inlineHelpText>This field is required to move to the Internal Review Stage</inlineHelpText>
    <label>Destination Ramp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>