force-app/main/default/objects/Opportunity/fields/NSSales_Dimensional_Equipment_Needed__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Dimensional_Equipment_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dimensional Equipment Needed</label>
    <type>Checkbox</type>
</CustomField>