force-app/main/default/objects/Opportunity/fields/NSSales_Division__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HB</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>LK</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>