force-app/main/default/objects/Opportunity/fields/NSSales_Handling__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Handling__c</fullName>
    <label>(+/-) Handling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>