force-app/main/default/objects/Opportunity/fields/NSSales_High_Priority__c.field-meta.xml
<CustomField>
    <fullName>NSSales_High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>