force-app/main/default/objects/Opportunity/fields/NSSales_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Implementation_Date__c</fullName>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>