force-app/main/default/objects/Opportunity/fields/NSSales_Incentive_Capital__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Incentive_Capital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Capital</label>
    <type>Checkbox</type>
</CustomField>