force-app/main/default/objects/Opportunity/fields/NSSales_Ind_Products_Unit_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Ind_Products_Unit_Owner_Email__c</fullName>
    <label>Industrial Products/Unit Owner Email</label>
    <type>Email</type>
</CustomField>