force-app/main/default/objects/Opportunity/fields/NSSales_Industrial_Products_Unit__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Industrial_Products_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial Products/Unit</label>
    <type>Checkbox</type>
</CustomField>