force-app/main/default/objects/Opportunity/fields/NSSales_InStageDayCount__c.field-meta.xml
<CustomField>
    <fullName>NSSales_InStageDayCount__c</fullName>
    <label>NSSales_InStageDayCount</label>
    <type>DateTime</type>
</CustomField>