force-app/main/default/objects/Opportunity/fields/NSSales_Interline_Services__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Interline_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPO requirement for approval process during Needs Analysis stage.</description>
    <label>Interline Services</label>
    <type>Checkbox</type>
</CustomField>