force-app/main/default/objects/Opportunity/fields/NSSales_Interline_Services_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Interline_Services_Owner_Email__c</fullName>
    <label>Interline Services Owner Email</label>
    <type>Email</type>
</CustomField>