force-app/main/default/objects/Opportunity/fields/NSSales_Is_609_1_Recalled__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Is_609_1_Recalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 609.1 Recalled?</label>
    <type>Checkbox</type>
</CustomField>