force-app/main/default/objects/Opportunity/fields/NSSales_isRecalled__c.field-meta.xml
<CustomField>
    <fullName>NSSales_isRecalled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecalled?</label>
    <type>Checkbox</type>
</CustomField>