force-app/main/default/objects/Opportunity/fields/NSSales_Lane_ID__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lane_ID__c</fullName>
    <label>Lane ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>