force-app/main/default/objects/Opportunity/fields/NSSales_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lead_Time__c</fullName>
    <inlineHelpText>NPO to provide lead time in number of days.</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>