force-app/main/default/objects/Opportunity/fields/NSSales_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Line_of_Business__c</fullName>
    <description>This  pulls the &quot;Line of Business&quot; from the Account Classification that is associated to the Opportunity.</description>
    <formula>TEXT( NSSales_Account_Classification__r.NS_Line_of_Business_BU__c )</formula>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>