force-app/main/default/objects/Opportunity/fields/NSSales_Marketing_Involved__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Marketing_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Involved</label>
    <type>Checkbox</type>
</CustomField>