force-app/main/default/objects/Opportunity/fields/NSSales_Merchandise_Unit_Train__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Merchandise_Unit_Train__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merchandise/Unit Train</label>
    <type>Checkbox</type>
</CustomField>