force-app/main/default/objects/Opportunity/fields/NSSales_Multi_Lane_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Multi_Lane_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Lane Opportunity</label>
    <type>Checkbox</type>
</CustomField>