force-app/main/default/objects/Opportunity/fields/NSSales_Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Need_by_Date__c</fullName>
    <inlineHelpText>The date marketing needs the final NPO Review decision. This field is required to move the Opportunity to the Internal Review Stage</inlineHelpText>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>