force-app/main/default/objects/Opportunity/fields/NSSales_Network_Capacity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Network_Capacity_Owner_Email__c</fullName>
    <label>Network Capacity Owner Email</label>
    <type>Email</type>
</CustomField>