force-app/main/default/objects/Opportunity/fields/NSSales_Network_Optimization__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Network_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPO requirement for approval process during Needs Analysis stage.</description>
    <label>Network Optimization</label>
    <type>Checkbox</type>
</CustomField>