force-app/main/default/objects/Opportunity/fields/NSSales_Network_Optimization_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Network_Optimization_Owner_Email__c</fullName>
    <label>Network Optimization Owner Email</label>
    <type>Email</type>
</CustomField>