force-app/main/default/objects/Opportunity/fields/NSSales_New_Employees__c.field-meta.xml
<CustomField>
    <fullName>NSSales_New_Employees__c</fullName>
    <label>New Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>