force-app/main/default/objects/Opportunity/fields/NSSales_New_Exp__c.field-meta.xml
<CustomField>
    <fullName>NSSales_New_Exp__c</fullName>
    <label>New/Exp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>