force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Approval_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Approval_Rejection_Reason__c</fullName>
    <label>NPO Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NSSales_NPO_Final_Decision__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line Capacity</fullName>
            </value>
            <value>
                <fullName>Terminal Capacity</fullName>
            </value>
            <value>
                <fullName>Equipment (cars)</fullName>
            </value>
            <value>
                <fullName>Crew Availability</fullName>
            </value>
            <value>
                <fullName>Power Constraint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>