force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Decision_Comments__c</fullName>
    <description>This will capture the comments entered by NPO approver while taking final NPO decision.</description>
    <label>NPO Decision Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>