force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Final_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPO Final Approval</label>
    <type>Checkbox</type>
</CustomField>