force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Final_Decision__c</fullName>
    <description>This picklist contains the values of the final decisions that can be taken by NPO Approver.</description>
    <label>NPO Final Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved as Requested</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>