force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Final_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Final_Decision_Date__c</fullName>
    <label>Date of NPO Decision</label>
    <type>Date</type>
</CustomField>