force-app/main/default/objects/Opportunity/fields/NSSales_NPO_Resubmission_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>NSSales_NPO_Resubmission_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPO Re-submission Confirmation</label>
    <type>Checkbox</type>
</CustomField>