force-app/main/default/objects/Opportunity/fields/NSSales_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Opportunity_Number__c</fullName>
    <displayFormat>ON{0000000000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>