force-app/main/default/objects/Opportunity/fields/NSSales_OpptyAcct_Notification__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OpptyAcct_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>oppty created to an account that does not have market mgr assignment</description>
    <label>OpptyAcct Alert</label>
    <type>Checkbox</type>
</CustomField>