force-app/main/default/objects/Opportunity/fields/NSSales_OPS_Planning_Central__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OPS_Planning_Central__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPS Planning Central</label>
    <type>Checkbox</type>
</CustomField>