force-app/main/default/objects/Opportunity/fields/NSSales_OPS_Planning_Central_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OPS_Planning_Central_Owner_Email__c</fullName>
    <label>OPS Planning Central Owner Email</label>
    <type>Email</type>
</CustomField>