force-app/main/default/objects/Opportunity/fields/NSSales_OPS_Planning_East__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OPS_Planning_East__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPO requirement for approval process during Needs Analysis stage.</description>
    <label>OPS Planning East</label>
    <type>Checkbox</type>
</CustomField>