force-app/main/default/objects/Opportunity/fields/NSSales_OPS_Planning_East_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_OPS_Planning_East_Status__c</fullName>
    <description>It stores the related approval record status</description>
    <label>OPS Planning East Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>